Fixed styling of columns and size of photo on mobile. Sized the resizer using the column width which we got through useRef

--- a/src/components/crop-image/crop-image.css
+++ b/src/components/crop-image/crop-image.css
@@ -8,6 +8,8 @@
     position: absolute;
     
     border-radius: 50%;
+    touch-action: pan-x pan-y pinch-zoom;
+    
   }
   .outline {
     width:100%;
